# bugscan

./: .gitignore  Cargo.toml  README.md
migrations/2023-12-30-075141_create_bashrc/: down.sql  up.sql
migrations/2023-12-31-065045_cli_manager/: down.sql  up.sql
src/: database.rs  fs.rs  lib.rs  main.rs  manager.rs  models.rs  schema.rs
src/ops/: base.rs
