[package]
name = "bashrc-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] } 
diesel = { version = "2.1.4", features = ["sqlite"] }
dotenvy = { version = "0.15.7" }
